--- a/README.adoc
+++ b/README.adoc
@@ -15,7 +15,7 @@ ifndef::env-github[]
 endif::[]
 :icons: font
 :source-highlighter: highlightjs
-:game-version: 0.2.1c
+:game-version: 0.3.0-e
 :repo: Xenira/TechtonicaVR
 
 image:https://img.shields.io/github/v/release/{repo}["GitHub release (with filter)", link="https://github.com/{repo}/releases/latest"]
@@ -64,6 +64,8 @@ endif::[]
 
 * Version {game-version} of the game. As the game is still in early access, this mod may not work with future versions of the game. If you encounter any issues, please create an https://github.com/{repo}/issues[Issue].
 * https://github.com/BepInEx/BepInEx[BepInEx] version BepInEx Version
+* https://github.com/Xenira/PiUtils[PiUtils] mod. Is included in the github release and as as an external dependency in the thunderstore release.
+* https://github.com/Xenira/TTIK[TTIK] mod. Is included in the github release and as an external dependency in the thunderstore release.
 
 == Setup
 
@@ -120,6 +122,7 @@ While the mod is in a playable state, it is still in early development. Some fea
 - Controller haptics
 - Smooth turning
 - UI
+- IK with coop support (https://github.com/Xenira/TTIK[TTIK])
 
 === Missing
 - Gesture support (e.g. Mining using pickaxe motion)
@@ -137,7 +140,6 @@ While the mod is in a playable state, it is still in early development. Some fea
 
 === Cool stuff to try
 - Tobii eye tracking for dynamic foveated rendering
-- Enable ik (The game ships with `FinalIK` so it should be possible. Probably just not networked yet.)
 
 == Configuration
 The configuration file is located in `BepInEx/config/de.xenira.techtonicavr.cfg`. You can edit it using a text editor like Notepad.
@@ -223,7 +225,7 @@ I don't like NexusMods. I don't like their ToS and I don't like their mod manage
 == License
 This mod is licensed under the GNU General Public License v3.0 (GPL-3.0).
 
-Contents of the `unity` and `libs` folders are licensed under their respective licenses.
+Contents of the `unity`, `tools` and `libs` folders are licensed under their respective licenses.
 
 == Disclaimer
 This mod is not affiliated with the game's developers Fire Hose Games, Unity Technologies or Valve Corporation. All trademarks are the property of their respective owners.
