--- a/README.adoc
+++ b/README.adoc
@@ -15,7 +15,7 @@ ifndef::env-github[]
 endif::[]
 :icons: font
 :source-highlighter: highlightjs
-:game-version: 0.3.0-e
+:game-version: 0.4.0-c
 :repo: Xenira/TechtonicaVR
 
 image:https://img.shields.io/github/v/release/{repo}["GitHub release (with filter)", link="https://github.com/{repo}/releases/latest"]
@@ -66,8 +66,11 @@ endif::[]
 * https://github.com/BepInEx/BepInEx[BepInEx] version BepInEx Version
 * https://github.com/Xenira/PiUtils[PiUtils] mod. Is included in the github release and as as an external dependency in the thunderstore release.
 * https://github.com/Xenira/TTIK[TTIK] mod. Is included in the github release and as an external dependency in the thunderstore release.
+* https://github.com/Xenira/PiVRLoader[PiVRLoader] mod. Is included in the github release and as an external dependency in the thunderstore release.
 
 == Setup
+
+IMPORTANT: After installing the mod, you need to restart the game for the mod to take effect. Let the game load into the main menu before restarting it.
 
 You can install the mod from https://thunderstore.io/c/techtonica/p/3_141/TechtonicaVR/[Thunderstore] or install it manually:
 
@@ -86,6 +89,9 @@ You can install the mod from https://thunderstore.io/c/techtonica/p/3_141/Techto
 
 === Dependencies
 The github release bundles the dependencies with the mod. The thunderstore release does not include the dependencies. You need to install them separately or use a mod manager that can install dependencies.
+
+==== PiVRLoader (Required)
+This mod requires the https://github.com/Xenira/PiVRLoader[PiVRLoader] mod to be installed. This mod performs most of the VR specific tasks like setting up the VR camera and controllers. It also provides some utility functions that are used by the VR mod.
 
 ==== TTIK (Required)
 This mod requires the https://github.com/Xenira/TTIK[TTIK] mod to be installed. This mod adds inverse kinematics (IK) to the game. This is required to render the player's body in VR. It also allows both VR and non-VR players to see the player's body movements. When playing co-op, the host needs to have this mod installed. For other non-VR players the mod is optional.
@@ -110,6 +116,14 @@ If you installed the audio fix, remove the `BepInEx/patches/Tobey/UnityAudio` an
 
 There will be some leftover files in the `Techtonica_Data` folder. To clean those up, delete the folder and verify the game's files in Steam. This will redownload the game's files and remove any leftover files. This is not strictly necessary but it will keep your game folder clean.
 
+== Controls
+To view and edit the controls, open the SteamVR dashboard and click `Controller Bindings`. The game should be listed as `Techtonica VR`. You can edit the controls there.
+The mod includes default bindings for the Valve Index Controllers (Knuckles) and the Oculus Touch Controllers. Only the Knuckles bindings have been tested as I don't own a Quest.
+
+=== Motion Controls / Interactions
+
+Toggling the Headlamp:: There are two Headlamps. One on the player's head and one on the right shoulder. To toggle the head mounted lamp, move your right hand on top of your head and press the `Use` key (Right Trigger). For the shoulder lamp, move your right hand next to your right ear and press the `Use` key (Right Trigger).
+
 == Current State
 While the mod is in a playable state, it is still in early development. Some features are still missing and there are some known issues. Other things might be a little yanky or not work as expected.
 
@@ -122,15 +136,12 @@ While the mod is in a playable state, it is still in early development. Some fea
 - Controller haptics
 - Smooth turning
 - UI
-- IK with coop support (https://github.com/Xenira/TTIK[TTIK])
+- IK with coop support and finger tracking (https://github.com/Xenira/TTIK[TTIK])
 
 === Missing
 - Gesture support (e.g. Mining using pickaxe motion)
-- Model for the player's body. Currently not a priority as this requires IK.
-- Default bindings for VR controllers other than the Valve Index Controllers (#16, #17)
 - Object outlines. Disabled for now as the shader is broken in VR.
-- Finger tracking (#15)
-- Ability to switch primary hand
+- Ability to switch primary hand (#153)
 - Ability to yeet paladin down the waterfall
 - Hand crank using uhhhhh... hands?
 
@@ -142,7 +153,9 @@ While the mod is in a playable state, it is still in early development. Some fea
 - Tobii eye tracking for dynamic foveated rendering
 
 == Configuration
-The configuration file is located in `BepInEx/config/de.xenira.techtonicavr.cfg`. You can edit it using a text editor like Notepad.
+The configuration file is located in `BepInEx/config/de.xenira.techtonicavr.cfg`. You can edit it using a text editor like vim.
+
+NOTE: Some configuration options moved into the https://github.com/Xenira/PiVRLoader[Pi VR Loader] mod. Please refer to the PiVRLoader documentation for those options.
 
 === Resetting the Configuration
 To reset the configuration, delete the `de.xenira.techtonicavr.cfg` file in the `BepInEx/config` folder. The mod will create a new configuration file with the default values the next time you run the game.
@@ -157,30 +170,17 @@ Enabed:: Enables or disables the mod. Default: `true`
 [horizontal]
 .Input
 Smooth Turn Speed:: Speed of smooth turning. Default: `90`
-Laser UI Only:: Only show the laser pointer when pointing at UI elements. Default: `true`
-Laser Color:: Color of the laser pointer. Default: `00FFFFFF` Cyan
-Laser Click Color:: Color of the laser pointer when clicking. Default: `0000FFFF` Blue
-Laser Hover Color:: Color of the laser pointer when hovering over a UI element. Default: `00FF00FF` Green
-Laser Invalid Color:: Color of the laser pointer when pointing at an invalid UI element. Default: `FF0000FF` Red
-Laser Thickness:: Thickness of the laser pointer. Default: `0.002`
-Laser Click Thickness Multiplier:: Thickness multiplier of the laser pointer when clicking. Default: `2`
 
 [horizontal]
 .Comfort
 Snap Turn Angle:: Angle of snap turns. Default: `30`
-Teleport Range:: Velocity of teleport arc. Effectively determines rang. Default: `12`
 Vignette Enabled:: Enables or disables vignette. If this is disabled the other vignette effects will be disabled as well. Default: `false`
 Vignette On Teleport:: Enables or disables vignette when teleporting. Default: `true`
 Vignette On Smooth Locomotion:: Enables or disables vignette when using smooth locomotion. Default: `true`
 Vignette On Snap Turn:: Enables or disables vignette when using snap turning. Default: `true`
-Vignette Color:: Color of the vignette. Default: `000000FF` Black
-Vignette Intensity:: Intensity of the vignette. Determines how far the vignette will close. Default: `0.5`
-Vignette Smoothness:: Adds a blur to the vignette edge. 0 is sharp edge, 1 is prob. unusable. Default: `0.15`
-Vignette Fade Speed:: Animation speed of the vignette. Higher is faster. Default: `3`
 
 [horizontal]
 .Buttons
-Click Time:: Time window in seconds for a button press to be considered a click. Higher value makes clicks easier, but delay drag 'n drop. Default: `0.2`
 Long Press Time:: Time in seconds before a button press is considered a long press. Default: `1`
 
 [horizontal]
@@ -189,18 +189,10 @@ Menu Spawn Distance:: Distance of the menu from the player. Default: `0.8`
 Menu Scale:: Scale of the menu (X/Y/Z). Default: `{"x": 0.001,"y":0.001,"z":0.001}`
 Inventory and Crafting Menu Scale Override:: Scale of the inventory and crafting menu (X/Y/Z). This menu has different scaling and needs separate config. Default: `{"x": 0.001,"y":0.0005,"z":0.001}`
 Menu Downward Offset:: Offset of the menu in the downward direction. Default: `0.2`
-Menu Scroll Speed:: Speed of scrolling through menus by moving the cursor to the edge. Speed increases when nearer to the edge. Default: `0.125`
-Menu Scroll Deadzone:: Deadzone for scrolling through menus by moving the cursor to the edge. In percent from the center. Effectively the size of the region not triggering scrolling. Default: `0.35`
 
 [horizontal]
 .Graphics
 Display Body:: Enables or disables rendering of the player's body. When false only hands are rendered. Default: `true`
-
-[horizontal]
-.Debug
-Debug Mode:: Mostly used for development. Default: `false`
-Gizmo Enabled:: Enables or disables gizmos. Only some objects have gizmos attached. Default: `false`
-Debug Line Enabled:: Enables or disables debug lines. Only some objects have debug lines attached and the direction might seem arbetrary at first glance. Default: `false`
 
 == Troubleshooting
 
